[metadata]
name = ML Base
author = deokwooj
description =  machine learning
long_description = file: README.md
long_description_content_type = text/markdown
keywords =  ml
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pytest

[options.packages.find]
where=src
